-- MySQL Script generated by MySQL Workbench
-- Sat Oct  7 11:39:54 2023
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema webshop
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema webshop
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `webshop` DEFAULT CHARACTER SET utf8 ;
USE `webshop` ;

-- -----------------------------------------------------
-- Table `webshop`.`admin`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`admin` (
  `id` INT NOT NULL,
  `user_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `user_id_UNIQUE` (`user_id` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`cart_item`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`cart_item` (
  `id` INT NOT NULL,
  `session_id` INT NOT NULL,
  `product_id` INT NOT NULL,
  `quantity` INT NOT NULL,
  `created_at` TIMESTAMP(1) NOT NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`collection`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`collection` (
  `id` INT NOT NULL,
  `name` VARCHAR(30) NOT NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`collection_product`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`collection_product` (
  `id` VARCHAR(45) NOT NULL,
  `collection_id` INT NOT NULL,
  `product_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`discount`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`discount` (
  `id` INT NOT NULL,
  `percentage` INT NOT NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`order_details`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`order_details` (
  `id` INT NOT NULL,
  `user_id` INT NOT NULL,
  `total` INT NOT NULL,
  `payment_id` INT NOT NULL,
  `status` VARCHAR(15) NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE,
  UNIQUE INDEX `payment_id_UNIQUE` (`payment_id` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`order_items`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`order_items` (
  `id` INT NOT NULL,
  `product_id` INT NOT NULL,
  `order_id` INT NOT NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`payment`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`payment` (
  `id` INT NOT NULL,
  `order_id` INT NOT NULL,
  `method` VARCHAR(15) NOT NULL,
  `is_fulfilled` TINYINT NOT NULL,
  `created_at` TIMESTAMP(1) NOT NULL,
  `fulfilled_at` TIMESTAMP(1) NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `order_id_UNIQUE` (`order_id` ASC) VISIBLE,
  UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`product`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`product` (
  `id` INT NOT NULL,
  `category` VARCHAR(45) NOT NULL,
  `name` VARCHAR(80) NOT NULL,
  `desc` MEDIUMTEXT NULL,
  `attribute` JSON NULL,
  `price` INT NOT NULL,
  `discount_id` INT NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE,
  UNIQUE INDEX `name_UNIQUE` (`name` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`shopping_session`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`shopping_session` (
  `id` INT NOT NULL,
  `user_id` INT NOT NULL,
  `total` INT NULL,
  `created_at` TIMESTAMP(1) NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `webshop`.`user`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `webshop`.`user` (
  `id` INT NOT NULL,
  `username` VARCHAR(20) NOT NULL,
  `password` VARCHAR(20) NOT NULL,
  `first_name` VARCHAR(20) NOT NULL,
  `last_name` VARCHAR(20) NOT NULL,
  `city` VARCHAR(20) NULL,
  `zip_code` VARCHAR(10) NULL,
  `address` VARCHAR(45) NULL,
  `phone_number` VARCHAR(15) NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE,
  UNIQUE INDEX `username_UNIQUE` (`username` ASC) VISIBLE)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
